<resources>
    <string name="app_name">Seed</string>
    <string name="store">Store</string>
    <string name="farmer">Farmer</string>
    <string name="designer">Designer</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">RePassword</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_name_Ref">بذرة</string>
    <string name="size">Size</string>
    <string name="humidity">Humidity</string>
    <string name="light">Light</string>
    <string name="temperature">Temperature</string>
    <string name="sar">sar</string>
    <string name="about">About</string>
    <string name="product_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="based_on">Based on </string>
    <string name="add_reviews">Add Review</string>
    <string name="user_reviews">Customer reviews</string>
    <string name="most_useful">Most useful</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_a_description">Add a description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_image">Add image</string>
    <string name="region">Region:</string>
    <string name="city">City:</string>
    <string name="district">District:</string>
    <string name="Profile">Profile</string>
    <string name="language">عربي</string>
    <string name="TermsAndConditions">Terms and Conditions</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="AdoutSeed">Adout Seed</string>
    <string name="signOut">Sign Out</string>
    <string name="addProduct">Add Product</string>
    <string name="productDetail">Product Detail</string>
    <string name="ProductName">Product Name</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="Stock">Stock</string>
    <string name="Category">Category</string>
    <string name="Save">Save</string>
    <string name="VAT">VAT</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="Shipping">Shipping</string>
    <string name="discount">Discount</string>
    <string name="sub_total">Sub total</string>
    <string name="Total">Total</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="FullName">Full Name</string>
    <string name="Search">Search</string>
    <string name="Trending">Trending</string>
    <string name="DoHaveAccount">Do have account?</string>
    <string name="CreateAccount">Create a new account</string>
    <string name="DontHaveAccount">Don\'t have account?</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="RememberMe">Remember me</string>
    <string name="Username">Username</string>
    <string name="seedplatform">seed platform</string>
    <string name="SeedPlatformSubtitle">A different platform and transferring the quality of agriculture from traditional to technical in a simple and easy way</string>
    <string name="Next">Next</string>
    <string name="Skip">Skip</string>
    <string name="Back">Back</string>
    <string name="WhoBenefits">Who benefits?</string>
    <string name="WhoBenefitsSubtitle">Those interested in agriculture, individuals, stores and those with expertise</string>
    <string name="Advantages">Safety, speed, easy provision of seeds, quick access to agricultural services, ease of payment, and product and service guarantee</string>
    <string name="required">Required</string>
    <string name="review">" Reviews"</string>
    <string name="there_is_no_review">There is no review</string>
    <string name="plant_size">Plant size</string>
    <string name="plant_humidity">Plant humidity</string>
    <string name="plant_light">Plant light</string>
    <string name="plant_temperature">Plant temperature</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="my_cart">My Cart</string>
    <string name="likes">Likes</string>
    <string name="the_product_has_been_added_to_the_cart">The product has been added to the cart</string>
    <string-array name="plant_size_array">
        <item>Very large</item>
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
        <item>Very small</item>
    </string-array>
    <string-array name="plant_light_array">
        <item>Diffuse</item>
        <item>Not Diffuse</item>
    </string-array>
    <string name="Continue_shopping">Continue shopping</string>
    <string name="follow_up_on_the_purchase">Follow up on the purchase</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="country">Country</string>
    <string name="administrative_region">Administrative region</string>
    <string name="residential_quarter">Residential quarter</string>
    <string name="address_name">Address Name</string>
    <string name="card_name">Card Name</string>
    <string name="card_date">00/00</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay</string>
    <string name="add_address">Add Address</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
</resources>