<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.Account" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Account "
            android:textSize="@dimen/TextTitle"
            android:textStyle="bold"
            android:textColor="@color/primary"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:orientation="vertical">


            <TextView
                android:id="@+id/Profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:text="@string/Profile"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/addProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:text="@string/addProduct"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/signIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:text="@string/sign_in"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:text="@string/sign_up"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/signOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:text="@string/signOut"
                android:textColor="#000000"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:orientation="vertical">


            <TextView
                android:id="@+id/AdoutSeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:text="@string/AdoutSeed"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/PrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:text="@string/PrivacyPolicy"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/TermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:text="@string/TermsAndConditions"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/Language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="end"
                android:text="@string/language"
                android:textColor="#000000"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>

