<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/starLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/star1"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/star2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/star1"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/star3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/star1"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/star4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/star1"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/star5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/star1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <EditText
        android:id="@+id/starDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_a_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/cancelReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/primary"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/saveReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/primary"/>

    </LinearLayout>

</LinearLayout>